fix(probe): read reports using baseline Android 16 compatible API